Bugfix: Programm stuerzte ab, wenn im Schulnamen ein Leerzeichen enthalten war. Neue Entwickler zu "About"-Screen hinzugefuegt.